<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.xianxiaotao.copyandstudy.ui.XVideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/icon"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="@string/login_sub_title"
                android:textSize="24sp"
                android:textColor="#FFF"
                android:background="#55FF3300"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center_vertical"
                android:hint="@string/login_username"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:background="#00000000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:background="#AAFFFFFF"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="65dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="center_vertical"
                    android:inputType="textPassword"
                    android:hint="@string/login_password"
                    android:textSize="18sp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:gravity="center"
                    android:text="@string/password_desc"
                    android:textColor="#AAFFFFFF"/>
            </LinearLayout>
            <TextView
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:clickable="true"
                android:text="@string/login_english"
                android:textSize="24sp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/blur_white_bg"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_forgot_password"
                android:textSize="15sp"
                android:textColor="#FFF"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
