<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_imps_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_iconComplete="@drawable/ic_action_accept"
                    app:cpb_iconError="@drawable/ic_action_cancel"
                    app:cpb_textIdle="@string/Upload" />
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_iconComplete="@drawable/ic_action_accept"
                    app:cpb_iconError="@drawable/ic_action_cancel"
                    app:cpb_textIdle="@string/Upload" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_ips_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_scs_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton6"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_pds_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton7"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_paddingProgress="10dp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton8"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_paddingProgress="10dp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_css_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton9"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload"
                    app:cpb_selectorIdle="@drawable/idle_state_selector"
                    app:cpb_selectorComplete="@drawable/complete_state_selector"
                    app:cpb_selectorError="@drawable/error_state_selector"/>
                <com.dd.CircularProgressButton
                    android:id="@+id/circularButton10"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="64dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/cpb_white"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="48dp"
                    app:cpb_textComplete="@string/Complete"
                    app:cpb_textError="@string/Error"
                    app:cpb_textIdle="@string/Upload"
                    app:cpb_selectorIdle="@drawable/idle_state_selector"
                    app:cpb_selectorComplete="@drawable/complete_state_selector"
                    app:cpb_selectorError="@drawable/error_state_selector"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>