<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ToolbarPopupTheme"
        app:layout_scrollFlags="scroll|enterAlways"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_frame_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:indeterminateDrawable="@drawable/frame_loading" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_rotate_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminateDrawable="@drawable/rotate_loading_github"
                    android:indeterminateDuration="1800" />
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:indeterminateDrawable="@drawable/rotate_loading_360"
                    android:indeterminateDuration="1800" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_custom_clip_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <com.xianxiaotao.copyandstudy.ui.XClipProgress
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_custom_wheel_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:orientation="horizontal">
                <com.xianxiaotao.copyandstudy.ui.ProgressWheel
                    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progress_bar_two"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    ProgressWheel:barColor="#339BB9"
                    ProgressWheel:barWidth="4dp"
                    ProgressWheel:rimColor="#44000000"
                    ProgressWheel:rimWidth="4dp"
                    ProgressWheel:spinSpeed="3dp"
                    ProgressWheel:text="click"
                    ProgressWheel:textColor="#222222"
                    ProgressWheel:textSize="14sp" />

                <com.xianxiaotao.copyandstudy.ui.ProgressWheel
                    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/progress_bar_one"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    ProgressWheel:barColor="#222"
                    ProgressWheel:barLength="30dp"
                    ProgressWheel:barWidth="6dp"
                    ProgressWheel:delayMillis="75"
                    ProgressWheel:rimColor="#4000"
                    ProgressWheel:rimWidth="2dp"
                    ProgressWheel:spinSpeed="20dp"
                    ProgressWheel:textColor="#222222"
                    ProgressWheel:textSize="14sp" />

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/action_start"
                    android:textColor="#666"
                    android:background="@drawable/button_gray"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/label_custom_pie_loading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:orientation="horizontal">
                <!-- default style -->
                <com.xianxiaotao.copyandstudy.ui.PieProgress
                    xmlns:PieProgress="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pie_progress1"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <!-- custom style -->
                <com.xianxiaotao.copyandstudy.ui.PieProgress
                    xmlns:PieProgress="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pie_progress2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    PieProgress:foregroundColor="#339BB9"
                    PieProgress:backgroundColor="#FF4444" />
                <Button
                    android:id="@+id/btn_start2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/action_start"
                    android:textColor="#666"
                    android:background="@drawable/button_gray"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>